Created the Home Page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/arrow-long-right.css' rel='stylesheet'>
     <title>Chuong Vo Portfolio</title>
 </head>
 
 <body>
     <section >
         <div class="Navbar">
-            <img src="./images/Logo.png" alt="logo" height="80" class="logo">
+            <img src="./images/cvo.png" alt="logo" height="50" class="logo">
                 <div class="navtab">
                     <div>Home</div>
                     <div>About</div>
@@ -18,6 +19,16 @@
                     <div>Projects</div>
                     <div>Contact</div>
                 </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="Home">
+            <h4 class="name">Hi, my name is </h4>
+            <h1 class="fullname">Chuong Vo</h1>
+            <h1 class="fullname">I'm a Frontend Developer</h1>
+            <p class="lightblue">Specializing in buliding exceptional digital experiences. Currently, I'm focused on building responsive Frontend web applications.</p>
+            <h3 class="lightblue">View Work</h3>
         </div>
     </section>
 </body>
