Hover over View Work, the arrow drops down.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/arrow-long-right.css' rel='stylesheet'>
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/arrow-right.css' rel='stylesheet'>
     <title>Chuong Vo Portfolio</title>
 </head>
 
@@ -26,9 +26,11 @@
         <div class="Home">
             <h4 class="name">Hi, my name is </h4>
             <h1 class="fullname">Chuong Vo</h1>
-            <h1 class="fullname">I'm a Frontend Developer</h1>
+            <h1 class="fullname">I'm a <span class="lightcoral">Frontend Developer </span></h1>
             <p class="lightblue">Specializing in buliding exceptional digital experiences. Currently, I'm focused on building responsive Frontend web applications.</p>
-            <h3 class="lightblue">View Work</h3>
+                <div class="viewworkcontainer">
+                    <h3 class="viewwork">View Work <i class="gg-arrow-right"></i></i></h3>
+                </div>
         </div>
     </section>
 </body>
