Create About Me Section

--- a/index.html
+++ b/index.html
@@ -9,29 +9,37 @@
 </head>
 
 <body>
-    <section >
-        <div class="Navbar">
-            <img src="./images/cvo.png" alt="logo" height="50" class="logo">
-                <div class="navtab">
-                    <div>Home</div>
-                    <div>About</div>
-                    <div>Skills</div>
-                    <div>Projects</div>
-                    <div>Contact</div>
-                </div>
+  <header >
+    <div class="Navbar">
+      <img src="./images/cvo.png" alt="logo" height="50" class="logo">
+        <div class="navtab">
+          <div>Home</div>
+          <div>About Me</div>
+          <div>Skills</div>
+          <div>Projects</div>
+          <div>Contact</div>
         </div>
-    </section>
+    </div>
+  </header>
 
-    <section>
-        <div class="Home">
-            <h4 class="name">Hi, my name is </h4>
-            <h1 class="fullname">Chuong Vo</h1>
-            <h1 class="fullname">I'm a <span class="lightcoral">Frontend Developer </span></h1>
-            <p class="lightblue">Specializing in buliding exceptional digital experiences. Currently, I'm focused on building responsive Frontend web applications.</p>
-                <div class="viewworkcontainer">
-                    <h3 class="viewwork">View Work <i class="gg-arrow-right"></i></i></h3>
-                </div>
+  <main>
+    <div class="Home">
+      <h4 class="name">Hi, my name is </h4>
+      <h1 class="fullname">Chuong Vo</h1>
+      <h1 class="fullname">I'm a <span class="lightcoral">Frontend Developer </span></h1>
+      <p class="lightblue">Specializing in buliding exceptional digital experiences. Currently, I'm focused on building responsive Frontend web applications.</p>
+        <div class="viewworkcontainer">
+          <h3 class="viewwork">View Work <i class="gg-arrow-right"></i></i></h3>
         </div>
-    </section>
+      <div class="About">
+        About Me
+      </div>
+        <h1 class="aboutleft">Hi, I'm Chuong, nice to meet you. Please take a look around!</h1>
+        <p class="aboutright">I am a senior IT Engineer whom passionate about building exceptional software that improves the lives of those around me. I specialize in creating responsive, mobile-first, front-end sites. On my free time, I love to keep myself updated on new technologies, by following on forum and blog to learn new techniques and to improve my creativities and skills.</p>
+    </div>
+
+
+
+  </main>
 </body>
 </html>
