--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-  <header >
+  <header class="Fixed">
     <div class="Navbar">
       <img src="./images/cvo.png" alt="logo" height="50" class="logo">
         <div class="navtab">
           <div>Home</div>
-          <div>About Me</div>
+          <div>About</div>
           <div>Skills</div>
           <div>Projects</div>
           <div>Contact</div>
@@ -31,9 +31,9 @@
         <div class="viewworkcontainer">
           <h3 class="viewwork">View Work <i class="gg-arrow-right"></i></i></h3>
         </div>
-      <div class="About">
-        About Me
-      </div>
+      <span class="About">
+        About
+      </span>
         <h1 class="aboutleft">Hi, I'm Chuong, nice to meet you. Please take a look around!</h1>
         <p class="aboutright">I am a senior IT Engineer whom passionate about building exceptional software that improves the lives of those around me. I specialize in creating responsive, mobile-first, front-end sites. On my free time, I love to keep myself updated on new technologies, by following on forum and blog to learn new techniques and to improve my creativities and skills.</p>
     </div>
