Use Grid for skills set layout.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,29 @@
         <div class="viewworkcontainer">
           <h3 class="viewwork">View Work <i class="gg-arrow-right"></i></i></h3>
         </div>
+
       <span class="About">
         About
       </span>
         <h1 class="aboutleft">Hi, I'm Chuong, nice to meet you. Please take a look around!</h1>
         <p class="aboutright">I am a senior IT Engineer whom passionate about building exceptional software that improves the lives of those around me. I specialize in creating responsive, mobile-first, front-end sites. On my free time, I love to keep myself updated on new technologies, by following on forum and blog to learn new techniques and to improve my creativities and skills.</p>
+      
+        <div class="Skills">
+        Skills
+      </div>
+        <p class="skillsent">These are the technologies I've worked with!</p>
+          <span class="skillset">
+            <div class="row">
+              <img src="./images/html.jpg" alt="html" height="200" width="225" class="images">
+              <img src="./images/CSS.png" alt="css" height="200" width="225" class="images">
+              <img src="./images/bootstrap-5-1.svg" alt="bootstrap" height="200" width="225" class="images">
+              <img src="./images/Javascript.png" alt="Javascript" height="200" width="225" class="images">
+              <img src="./images/nodejs.png" alt="html" height="200" width="225" class="images">
+              <img src="./images/react.png" alt="css" height="200" width="225" class="images">
+              <img src="./images/git.png" alt="bootstrap" height="200" width="225" class="images">
+              <img src="./images/github.png" alt="Javascript" height="200" width="225" class="images">
+            </div>
+          </span>
     </div>
 
 
