added a href to Navbar to jump to their section.

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div class="Navbar">
       <img src="./images/cvo.png" alt="logo" height="50" class="logo">
         <div class="navtab">
-          <div>Home</div>
-          <div>About</div>
-          <div>Skills</div>
-          <div>Projects</div>
-          <div>Contact</div>
+          <a href="#Homie">Home</a>
+          <a href="#Abouts">About</a>
+          <a href="#Skill">Skills</a>
+          <a href="#Project">Projects</a>
+          <a href="#Contacts">Contact</a>
         </div>
     </div>
   </header>
 
-  <main>
+  <main id="Homie">
     <div class="Home">
       <h4 class="name">Hi, my name is </h4>
       <h1 class="fullname">Chuong Vo</h1>
@@ -32,13 +32,13 @@
           <h3 class="viewwork">View Work <i class="gg-arrow-right"></i></i></h3>
         </div>
 
-      <span class="About">
+      <span class="About" id="Abouts">
         About
       </span>
         <h1 class="aboutleft">Hi, I'm Chuong, nice to meet you. Please take a look around!</h1>
         <p class="aboutright">I am a senior IT Engineer whom passionate about building exceptional software that improves the lives of those around me. I specialize in creating responsive, mobile-first, front-end sites. On my free time, I love to keep myself updated on new technologies, by following on forum and blog to learn new techniques and to improve my creativities and skills.</p>
       
-        <div class="Skills">
+        <div class="Skills" id="Skill">
           Skills
         </div>
           <p class="skillsent">These are the technologies I've worked with!</p>
@@ -55,7 +55,7 @@
               </div>
             </span>
         
-        <div class="Projects">
+        <div class="Projects" id="Project">
           Projects
         </div>
           <span class="projectset">
@@ -73,7 +73,7 @@
           </span>
 
         <span class="footer">
-            <div class="Contact">
+            <div class="Contact" id="Contacts">
               Contact
             </div> 
             <br>
